[project]
name = "task-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "mekanb",email = "baymyradov.mekanx@gmial.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.20.1,<0.21.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
